--- a/package.json
+++ b/package.json
@@ -17,20 +17,25 @@
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
+    "@types/katex": "^0.16.7",
     "better-react-mathjax": "^2.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.19.0",
     "geist": "^1.3.1",
+    "katex": "^0.16.21",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
+    "nextra": "^4.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-latex": "^2.0.0",
     "react-spinners": "^0.15.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
