--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.3.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
@@ -28,6 +29,7 @@
     "convex": "^1.19.0",
     "geist": "^1.3.1",
     "katex": "^0.16.21",
+    "lenis": "^1.1.20",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
