--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/clerk-react": "^5.22.11",
     "@clerk/localizations": "^3.10.4",
     "@clerk/nextjs": "^6.11.1",
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.3.1",
     "@prisma/extension-accelerate": "^1.2.1",
