--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.19.0",
+    "fumadocs-core": "^15.0.8",
+    "fumadocs-ui": "^15.0.8",
     "geist": "^1.3.1",
     "katex": "^0.16.21",
     "lenis": "^1.1.20",
@@ -49,6 +51,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -56,7 +59,7 @@
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "prisma": "^6.3.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5"
   }
 }
