--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.22.11",
@@ -26,11 +27,13 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@types/katex": "^0.16.7",
+    "@types/mdx": "^2.0.13",
     "better-react-mathjax": "^2.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.19.0",
     "fumadocs-core": "^15.0.8",
+    "fumadocs-mdx": "^11.5.5",
     "fumadocs-ui": "^15.0.8",
     "geist": "^1.3.1",
     "katex": "^0.16.21",
